--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <title>page</title>
 <link rel="stylesheet" type="text/css" href="decoweb.css">
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+<meta name="viewport" content-type="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
 <header>
 <div class="row">
 <p class="ps">VONGAPP</p>
-<ul>
+<ul class="pp">
 <li class="hea"><a href="#section-1">Home</a></li>
 <li class="hea"><a href="#section-2">Service</a></li>
 <li class="hea"><a href="#section-3">About Us</a></li>
@@ -69,11 +70,14 @@ hosting.
 <div class="col-sm-6">
 <h4>Duration</h4>
 <p>
-No estimation time for completion because<br> we might
-set it after something come up and<br> delay the process
-of creating application <br>or we set the time and complete
-it early than<br> estimated. All we saying is that we finish
-<br>our work in time and we satisfy our clients.
+No estimation time for completion<br>
+because we might set it after <br>
+something come up and delay <br>
+the process of creating application<br>
+or we set the time and complete<br>
+it early than estimated. All<br>
+we saying is that we finish our <br>
+work in time and we satisfy our clients.
 </p>
 </div>
 </div>
@@ -99,17 +103,25 @@ Please visit us <a href="#section-5">Click here </a>
 <section id="section-3" class="aboutus">
 <h3>About us</h3>
 <div =class="row">
-<p>VONGAPP is the company that have develeped one <br>few months ago that was found by Vongani Mahumani were he was doing <br>his final
-year of IT(software development) and also doing internship<br> at Zyelabs. The company was develeped for creating <br>applicatin using 
- new and upgrated programing langauges<br> depending on how much and what kind of application<br> you want. Money is not our
- first pririoty but <br>providing good service is what we are capable of.
+<div "col-sm-6 col-md-3">
+<p>VONGAPP is the company that have being develeped  
+<br> few months ago that was found by Vongani <br>
+ Mahumani were he was doing his final <br>
+year of IT(software development) and also  <br>
+doing internship at Zyelabs. The company was  <br>
+develeped for creating application using  <br>
+new and upgrated programing langauges depending <br>
+ on how much and what kind of application<br>
+ you want. Money is not our first pririoty but  <br>
+providing good service is what we are capable of. <br>
 </p>
+</div>
 </div>
 <div >
 <h4>Partners<h4>
 <ul>
 <li>Nibengo</li>
-<li>Zyelabs</li>
+<li><img src="zlog.png"/></li>
 </ul>
 </div>
 </section>
@@ -117,42 +129,61 @@ year of IT(software development) and also doing internship<br> at Zyelabs. The c
 
 <section id="section-4" class="gallary">
 <h3>Gallery</h3>
-
 <div class="container">
 <div class="row">
-<div class="col-sm-12">
+<div  class="col-sm-6 col-md-3">
 <p><img src="5.png"/></p>
+</div>
+<div  class="col-sm-6 col-md-3">
 <p><img src="6.jpg"/></p>
+</div>
+<div  class="col-sm-6 col-md-3">
 <p><img src="7.jpg"/></p>
-<p><img src="8.jpg"/></p>
+</div>
+<div  class="col-sm-6 col-md-3">
+<p ><img src="8.jpg"/></p>
 </div>
 </div>
 
 <div class="row">
-<div class="col-sm-12">
+<div  class="col-sm-6 col-md-3">
 <p><img src="15.jpg"/></p>
+</div>
+<div  class="col-sm-6 col-md-3">
 <p><img src="16.jpg"/></p>
+</div>
+<div  class="col-sm-6 col-md-3">
 <p><img src="12.jpg"/></p>
-<p><img src="13.jpg"/></p>
+</div>
+<div  class="col-sm-6 col-md-3">
+<p ><img src="13.jpg"/></p>
 </div>
 </div>
 
 <div class="row">
-<div class="col-sm-12">
+<div  class="col-sm-6 col-md-3">
 <p><img src="12.jpg"/></p>
+</div>
+<div  class="col-sm-6 col-md-3">
 <p><img src="10.jpg"/></p>
+</div>
+<div  class="col-sm-6 col-md-3">
 <p><img src="11.png"/></p>
-<p><img src="17.jpg"/></p>
+</div>
+<div  class="col-sm-6 col-md-3">
+<p ><img src="17.jpg"/></p>
 </div>
 </div>
 </div>
 </section>
 
 <section id="section-5" class="contactus">
-<div class="contpic">
+<div class="container">
+<div class="row">
 <h3>Contact Us</h3>
-
+<div "col-sm-12 col-md-12">
 <a href="#"> <img src="1.gif"> </a>
+<div>
 <address>
 <p><strong>address</strong></p>
 328 Minnarr Street<br>
@@ -160,9 +191,11 @@ Pretoria Central<br>
 Pretoria<br>
 0002<br>
 </address>
-<p>Email: <a href="mailto:mailto:info@vongapp.net">info@vongapp.co.za</a></p>
+<p>Email: <a href="mailto:info@vongapp.net">info@vongapp.co.za</a></p>
 <p>Call us: (011) 999 9999</p>
 <p>WhatsAPP US: (074) 999 9999</p>
+<div>
+</div>
 </div>
 </section>
 
