--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ we create application specially for you....
 <h3>Service</h3>
 <div class="container">
 <div class="row">
-<div class="col-sm-6 col-xs-2">
+<div class="col-sm-6 col-md-6">
 <h4>Types of application</h4>
 <p>
 We do applications accoding to the <br>client's wants, all we want is the <br>
@@ -43,7 +43,7 @@ description of the application mostly <br>the functionalities the rest is <br>
 for us to create.
 </p>
 </div>
-<div class="col-sm-6 col-xs-2">
+<div class="col-sm-6 col-md-6">
 <h4>Hosting</h4>
 <p>
 Hosting is our pririoty as the create <br>of the applications, no need to <br>
@@ -54,7 +54,7 @@ hosting.
 </div>
 
 <div class="row">
-<div class="col-sm-6 col-md-2">
+<div class="col-sm-6 col-md-6">
 <h4>Programing langauges</h4>
 <p>
 <ul>
@@ -67,7 +67,7 @@ hosting.
 </ul>
 </p>
 </div>
-<div class="col-md-6">
+<div class="col-md-6 col-md-6">
 <h4>Duration</h4>
 <p>
 No estimation time for completion<br>
@@ -83,14 +83,14 @@ work in time and we satisfy our clients.
 </div>
 
 <div class="row">
-<div class="col-sm-6 col-md-2">
+<div class="col-sm-6 col-md-6">
 <h4>Cost</h4>
 <p>
 We charge acodinding to how long the<br> application it can 
 take and how much <br>fuctionalities clients want.
 </p>
 </div>
-<div class="col-sm-6 col-md-2">
+<div class="col-sm-6 col-md-6">
 <h4>Booking</h4>
 <p>
 Please visit us <a href="#section-5">Click here </a>
