--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>page</title>
 <link rel="stylesheet" type="text/css" href="decoweb.css">
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-<meta name="viewport" content-type="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
 </head>
 
 <body>
@@ -35,7 +35,7 @@ we create application specially for you....
 <h3>Service</h3>
 <div class="container">
 <div class="row">
-<div class="col-sm-6 col-md-6">
+<div class="col-sm-6">
 <h4>Types of application</h4>
 <p>
 We do applications accoding to the <br>client's wants, all we want is the <br>
@@ -43,7 +43,7 @@ description of the application mostly <br>the functionalities the rest is <br>
 for us to create.
 </p>
 </div>
-<div class="col-sm-6 col-md-6">
+<div class="col-sm-6">
 <h4>Hosting</h4>
 <p>
 Hosting is our pririoty as the create <br>of the applications, no need to <br>
@@ -54,7 +54,7 @@ hosting.
 </div>
 
 <div class="row">
-<div class="col-sm-6 col-md-6">
+<div class="col-sm-6">
 <h4>Programing langauges</h4>
 <p>
 <ul>
@@ -67,7 +67,7 @@ hosting.
 </ul>
 </p>
 </div>
-<div class="col-md-6 col-md-6">
+<div class="col-sm-6">
 <h4>Duration</h4>
 <p>
 No estimation time for completion<br>
@@ -83,14 +83,14 @@ work in time and we satisfy our clients.
 </div>
 
 <div class="row">
-<div class="col-sm-6 col-md-6">
+<div class="col-sm-6">
 <h4>Cost</h4>
 <p>
 We charge acodinding to how long the<br> application it can 
 take and how much <br>fuctionalities clients want.
 </p>
 </div>
-<div class="col-sm-6 col-md-6">
+<div class="col-sm-6">
 <h4>Booking</h4>
 <p>
 Please visit us <a href="#section-5">Click here </a>
@@ -104,7 +104,7 @@ Please visit us <a href="#section-5">Click here </a>
 <div class="container">
 <h3>About us</h3>
 <div =class="row">
-<div "col-sm-6 col-md-3">
+<div "col-sm-6">
 <p>VONGAPP is the company that have being develeped  
 <br> few months ago that was found by Vongani <br>
  Mahumani were he was doing his final <br>
@@ -204,7 +204,7 @@ Pretoria<br>
 <div class="container">
 <div class="row">
 <h3>Follow Us</h3>
-<div class="col-sm-2 col-md-2">
+<div class="col-sm-2 col-xs-2">
 <p class="social"><a href="https://www.facebook.com/" ><img src="facebook1.png"/></a></p>
 </div>
 <div class="col-sm-2 col-xs-2">
