--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ work in time and we satisfy our clients.
 </div>
 
 <div class="row">
-<div class="col-sm-6">
+<div class="col-sm-6 col-sx-1 col-md-6">
 <h4>Cost</h4>
 <p>
 We charge acodinding to how long the<br> application it can 
@@ -105,7 +105,7 @@ Please visit us <a href="#section-5">Click here </a>
 <div class="container">
 <h3>About us</h3>
 <div =class="row">
-<div "col-sm-6">
+<div "col-sm-12">
 <p>VONGAPP is the company that have being develeped  
 <br> few months ago that was found by Vongani <br>
  Mahumani were he was doing his final <br>
@@ -133,46 +133,46 @@ providing good service is what we are capable of. <br>
 <h3>Gallery</h3>
 <div class="container">
 <div class="row">
-<div  class="col-sm-6 col-md-3">
+<div  class="col-sm-6">
 <p><img src="5.png"/></p>
 </div>
-<div  class="col-sm-6 col-md-3">
+<div  class="col-sm-6">
 <p><img src="6.jpg"/></p>
 </div>
-<div  class="col-sm-6 col-md-3">
+<div  class="col-sm-6">
 <p><img src="7.jpg"/></p>
 </div>
-<div  class="col-sm-6 col-md-3">
+<div  class="col-sm-6">
 <p ><img src="8.jpg"/></p>
 </div>
 </div>
 
 <div class="row">
-<div  class="col-sm-6 col-md-3">
+<div  class="col-sm-6">
 <p><img src="15.jpg"/></p>
 </div>
-<div  class="col-sm-6 col-md-3">
+<div  class="col-sm-6">
 <p><img src="16.jpg"/></p>
 </div>
-<div  class="col-sm-6 col-md-3">
+<div  class="col-sm-6">
 <p><img src="12.jpg"/></p>
 </div>
-<div  class="col-sm-6 col-md-3">
+<div  class="col-sm-6">
 <p ><img src="13.jpg"/></p>
 </div>
 </div>
 
 <div class="row">
-<div  class="col-sm-6 col-md-3">
+<div  class="col-sm-6">
 <p><img src="12.jpg"/></p>
 </div>
-<div  class="col-sm-6 col-md-3">
+<div  class="col-sm-6">
 <p><img src="10.jpg"/></p>
 </div>
-<div  class="col-sm-6 col-md-3">
+<div  class="col-sm-6">
 <p><img src="11.png"/></p>
 </div>
-<div  class="col-sm-6 col-md-3">
+<div  class="col-sm-6">
 <p ><img src="17.jpg"/></p>
 </div>
 </div>
