--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ work in time and we satisfy our clients.
 </div>
 
 <div class="row">
-<div class="col-sm-6 col-sx-1 col-md-6">
+<div class="col-sm-6">
 <h4>Cost</h4>
 <p>
 We charge acodinding to how long the<br> application it can 
@@ -105,7 +105,6 @@ Please visit us <a href="#section-5">Click here </a>
 <div class="container">
 <h3>About us</h3>
 <div =class="row">
-<div "col-sm-12">
 <p>VONGAPP is the company that have being develeped  
 <br> few months ago that was found by Vongani <br>
  Mahumani were he was doing his final <br>
@@ -117,7 +116,6 @@ new and upgrated programing langauges depending <br>
  you want. Money is not our first pririoty but  <br>
 providing good service is what we are capable of. <br>
 </p>
-</div>
 </div>
 
 <h4>Partners<h4>
