--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ we create application specially for you....
 <h3>Service</h3>
 <div class="container">
 <div class="row">
-<div class="col-sm-6">
+<div class="col-sm-6 ">
 <h4>Types of application</h4>
 <p>
 We do applications accoding to the <br>client's wants, all we want is the <br>
@@ -54,7 +54,7 @@ hosting.
 </div>
 
 <div class="row">
-<div class="col-sm-6">
+<div class="col-sm-6 ">
 <h4>Programing langauges</h4>
 <p>
 <ul>
@@ -130,46 +130,46 @@ providing good service is what we are capable of. <br>
 <h3>Gallery</h3>
 <div class="container">
 <div class="row">
-<div  class="col-sm-6">
+<div  class="col-sm-6 col-md-3">
 <p><img src="5.png"/></p>
 </div>
-<div  class="col-sm-6">
+<div  class="col-sm-6 col-md-3">
 <p><img src="6.jpg"/></p>
 </div>
-<div  class="col-sm-6">
+<div  class="col-sm-6 col-md-3">
 <p><img src="7.jpg"/></p>
 </div>
-<div  class="col-sm-6">
+<div  class="col-sm-6 col-md-3">
 <p ><img src="8.jpg"/></p>
 </div>
 </div>
 
 <div class="row">
-<div  class="col-sm-6">
+<div  class="col-sm-6 col-md-3">
 <p><img src="15.jpg"/></p>
 </div>
-<div  class="col-sm-6">
+<div  class="col-sm-6 col-md-3">
 <p><img src="16.jpg"/></p>
 </div>
-<div  class="col-sm-6">
+<div  class="col-sm-6 col-md-3">
 <p><img src="12.jpg"/></p>
 </div>
-<div  class="col-sm-6">
+<div  class="col-sm-6 col-md-3">
 <p ><img src="13.jpg"/></p>
 </div>
 </div>
 
 <div class="row">
-<div  class="col-sm-6">
+<div  class="col-sm-6 col-md-3">
 <p><img src="12.jpg"/></p>
 </div>
-<div  class="col-sm-6">
+<div  class="col-sm-6 col-md-3">
 <p><img src="10.jpg"/></p>
 </div>
-<div  class="col-sm-6">
+<div  class="col-sm-6 col-md-3">
 <p><img src="11.png"/></p>
 </div>
-<div  class="col-sm-6">
+<div  class="col-sm-6 col-md-3">
 <p ><img src="17.jpg"/></p>
 </div>
 </div>
