--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>page</title>
 <link rel="stylesheet" type="text/css" href="decoweb.css">
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
@@ -25,9 +25,9 @@
 <section id="section-1" class="home">
 <div class="row">
 <br>
-<p >vongapp<br/>
+<p ><strong>vongapp<br/>
 we create application specially for you....
-</p>
+</strong></p>
 </div>
 </section>
 
@@ -161,10 +161,10 @@ providing good service is what we are capable of. <br>
 
 <div class="row">
 <div  class="col-sm-6 col-md-3">
-<p><img src="12.jpg"/></p>
+<p><img src="15.jpg"/></p>
 </div>
 <div  class="col-sm-6 col-md-3">
-<p><img src="10.jpg"/></p>
+<p><img src="12.jpg"/></p>
 </div>
 <div  class="col-sm-6 col-md-3">
 <p><img src="11.png"/></p>
@@ -200,24 +200,18 @@ Pretoria<br>
 <div class="container">
 <div class="row">
 <h3>Follow Us</h3>
-<div class="col-sm-2 col-xs-1">
-<p class="social"><a href="https://www.facebook.com/" ><img src="facebook1.png"/></a></p>
+<div class="col-sm-3 col-xs-2" id="social"><a href="https://www.facebook.com/" ><img src="facebook1.png"/></a>
 </div>
-<div class="col-sm-2 col-xs-1">
-<p class="social"><a href="#" ><img src="instagram1.png"/></a></p>
+<div class="col-sm-3 col-xs-2" id="social">
+<a href="#" ><img src="instagram1.png"/></a>
 </div>
-<div class="col-sm-2 col-xs-1">
-<p class="social"><a href="#" ><img src="twitter1.png"/></a></p>
+<div class="col-sm-3 col-xs-2" id="social">
+<a href="#" ><img src="twitter1.png"/></a>
 </div>
-<div class="col-sm-2 col-xs-1">
-<p class="social"><a href="#" ><img src="youtube1.png"/></a></p>
+<div class="col-sm-3 col-xs-2" id="social">
+<a href="#" ><img src="youtube1.png"/></a>
 </div>
-<div class="col-sm-2 col-xs-1">
-<p class="social"><a href="#" ><img src="linkin1.png"/></a></p>
-</div>
-<div class="col-sm-2 col-xs-1">
-<p class="social"><a href="#" ><img src="linkin1.png"/></a></p>
-</div>
+
 </div>
 </div>
 </section>
