--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ we create application specially for you....
 <h3>Service</h3>
 <div class="container">
 <div class="row">
-<div class="col-sm-6 ">
+<div class="col-sm-12">
 <h4>Types of application</h4>
 <p>
 We do applications accoding to the <br>client's wants, all we want is the <br>
@@ -42,7 +42,7 @@ description of the application mostly <br>the functionalities the rest is <br>
 for us to create.
 </p>
 </div>
-<div class="col-sm-6">
+<div class="col-sm-12">
 <h4>Hosting</h4>
 <p>
 Hosting is our pririoty as the create <br>of the applications, no need to <br>
@@ -53,7 +53,7 @@ hosting.
 </div>
 
 <div class="row">
-<div class="col-sm-6 ">
+<div class="col-sm-12">
 <h4>Programing langauges</h4>
 <p>
 <ul>
@@ -66,7 +66,7 @@ hosting.
 </ul>
 </p>
 </div>
-<div class="col-sm-6">
+<div class="col-sm-12">
 <h4>Duration</h4>
 <p>
 No estimation time for completion<br>
@@ -82,14 +82,14 @@ work in time and we satisfy our clients.
 </div>
 
 <div class="row">
-<div class="col-sm-6">
+<div class="col-sm-12">
 <h4>Cost</h4>
 <p>
 We charge acodinding to how long the<br> application it can 
 take and how much <br>fuctionalities clients want.
 </p>
 </div>
-<div class="col-sm-6">
+<div class="col-sm-12">
 <h4>Booking</h4>
 <p>
 Please visit us <a href="#section-5">Click here </a>
@@ -103,7 +103,7 @@ Please visit us <a href="#section-5">Click here </a>
 <div class="container">
 <h3>About us</h3>
 <div =class="row">
-<p>VONGAPP is the company that have being develeped  
+<p class="col-sm-12">VONGAPP is the company that have being develeped  
 <br> few months ago that was found by Vongani <br>
  Mahumani were he was doing his final <br>
 year of IT(software development) and also  <br>
