--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <div class="row">
 <br>
 <p ><strong>vongapp<br/>
-we create application specially for you....
+we create application specially for you...
 </strong></p>
 </div>
 </section>
@@ -34,7 +34,7 @@ we create application specially for you....
 <h3>Service</h3>
 <div class="container">
 <div class="row">
-<div class="col-sm-12">
+<div class="col-sm-12 col-md-6">
 <h4>Types of application</h4>
 <p>
 We do applications accoding to the <br>client's wants, all we want is the <br>
@@ -42,10 +42,10 @@ description of the application mostly <br>the functionalities the rest is <br>
 for us to create.
 </p>
 </div>
-<div class="col-sm-12">
+<div class="col-sm-12 col-md-6">
 <h4>Hosting</h4>
 <p>
-Hosting is our pririoty as the create <br>of the applications, no need to <br>
+Hosting is our pririoty as we are the<br> create of the applications, no need to <br>
 worry about hosting we will do it<br> for you for free as will be no cost for<br>
 hosting.
 </p>
@@ -53,7 +53,7 @@ hosting.
 </div>
 
 <div class="row">
-<div class="col-sm-12">
+<div class="col-sm-12 col-md-6">
 <h4>Programing langauges</h4>
 <p>
 <ul>
@@ -66,7 +66,7 @@ hosting.
 </ul>
 </p>
 </div>
-<div class="col-sm-12">
+<div class="col-sm-12 col-md-6">
 <h4>Duration</h4>
 <p>
 No estimation time for completion<br>
@@ -82,14 +82,14 @@ work in time and we satisfy our clients.
 </div>
 
 <div class="row">
-<div class="col-sm-12">
+<div class="col-sm-12 col-md-6">
 <h4>Cost</h4>
 <p>
 We charge acodinding to how long the<br> application it can 
 take and how much <br>fuctionalities clients want.
 </p>
 </div>
-<div class="col-sm-12">
+<div class="col-sm-12 col-md-6">
 <h4>Booking</h4>
 <p>
 Please visit us <a href="#section-5">Click here </a>
