--- a/index.html
+++ b/index.html
@@ -8,25 +8,27 @@
 <body>
 <header>
 <div class="row">
-<p class="ps">VONGAPP</p>
-<ul class="pp">
-<li class="hea"><a href="#section-1">Home</a></li>
-<li class="hea"><a href="#section-2">Service</a></li>
-<li class="hea"><a href="#section-3">About Us</a></li>
-<li class="hea"><a href="#section-4">Gallery</a></li>
-<li class="hea"><a href="#section-5">Contact Us</a></li>
-<li class="hea"><a href="#section-6">Follow Us</a></li>
-<li class="hea"><a href="#section-7">Careers</a></li>
+<p>VONGAPP</p>
+<ul>
+<li><a href="#section-1">Home</a></li>
+<li><a href="#section-2">Service</a></li>
+<li><a href="#section-3">About Us</a></li>
+<li><a href="#section-4">Gallery</a></li>
+<li><a href="#section-5">Contact Us</a></li>
+<li><a href="#section-6">Follow Us</a></li>
+<li><a href="#section-7">Careers</a></li>
 </ul>
 </div>
 </header>
 
 <section id="section-1" class="home">
 <div class="row">
+<div class="col-sm-12 col-md-12">
 <br>
 <p ><strong>vongapp<br/>
 we create application specially for you...
 </strong></p>
+</div>
 </div>
 </section>
 
@@ -129,16 +131,16 @@ providing good service is what we are capable of. <br>
 <h3>Gallery</h3>
 <div class="container">
 <div class="row">
-<div  class="col-sm-6 col-md-3">
+<div  class="col-sm-6 col-md-3 col-xs-12">
 <p><img src="5.png"/></p>
 </div>
-<div  class="col-sm-6 col-md-3">
+<div  class="col-sm-6 col-md-3 col-xs-12">
 <p><img src="6.jpg"/></p>
 </div>
-<div  class="col-sm-6 col-md-3">
+<div  class="col-sm-6 col-md-3 col-xs-12">
 <p><img src="7.jpg"/></p>
 </div>
-<div  class="col-sm-6 col-md-3">
+<div  class="col-sm-6 col-md-3 col-xs-12">
 <p ><img src="8.jpg"/></p>
 </div>
 </div>
@@ -210,7 +212,6 @@ Pretoria<br>
 <div class="col-sm-3 col-xs-2" id="social">
 <a href="#" ><img src="youtube1.png"/></a>
 </div>
-
 </div>
 </div>
 </section>
