scroll function added

--- a/index.html
+++ b/index.html
@@ -2,19 +2,18 @@
 <head>
 <title>page</title>
 <link rel="stylesheet" type="text/css" href="decoweb.css">
+
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-<script>
-
-</script>
+<script type="text/javascript" src="behaviour.js"></script>
 </head>
 
 <body>
 <header>
 <div class="ll">
 <div class="my">
-<p class="log">VONGAPP</p>
+<p class="log"><a href="#section-1" class="link">Vongapp</a></p>
 <button class="but" onclick="myFunction()">Menu</button>
 </div>
 <ul id="drop" class="dis" onclick="myFunction1()">
@@ -27,22 +26,13 @@
 <li><a href="#section-7" class="link">Careers</a></li>
 </ul>
 </div>
-<script>
-function myFunction(){
-document.getElementById("drop").classList.toggle("show");
-}
-function myFunction1(){
-document.getElementById("drop").classList.toggle("show");
-}
-
-</script>
 </header>
 
 <section id="section-1" class="home">
 <div class="row">
 <div class="col-sm-12 col-md-12">
 <br>
-<p ><strong>vongapp<br/>
+<p ><strong>Vongapp<br/>
 we create application specially for you...
 </strong></p>
 </div>
@@ -122,7 +112,7 @@ Please visit us <a href="#section-5">Click here </a>
 <div class="container">
 <h3>About us</h3>
 <div =class="row">
-<p class="col-sm-12">VONGAPP is the company that have being develeped  
+<p class="col-sm-12">Vongapp is the company that have being develeped  
 <br> few months ago that was found by Vongani <br>
  Mahumani were he was doing his final <br>
 year of IT(software development) and also  <br>
@@ -148,47 +138,47 @@ providing good service is what we are capable of. <br>
 <h3>Gallery</h3>
 <div class="container">
 <div class="row">
-<div  class="col-sm-6 col-md-3 col-xs-12">
-<p><img src="5.png"/></p>
+<div  class=" col-sm-6 col-md-3" >
+<p><img src="5.png" class="img-thumbnail"></p>
 </div>
-<div  class="col-sm-6 col-md-3 col-xs-12">
-<p><img src="6.jpg"/></p>
+<div  class="col-sm-6 col-md-3">
+<p><img src="6.jpg" class="img-thumbnail"></p>
 </div>
-<div  class="col-sm-6 col-md-3 col-xs-12">
-<p><img src="7.jpg"/></p>
+<div  class="col-sm-6 col-md-3">
+<p><img src="7.jpg" class="img-thumbnail"></p>
 </div>
-<div  class="col-sm-6 col-md-3 col-xs-12">
-<p ><img src="8.jpg"/></p>
+<div  class="col-sm-6 col-md-3">
+<p ><img src="8.jpg" class="img-thumbnail"></p>
 </div>
 </div>
 
 <div class="row">
 <div  class="col-sm-6 col-md-3">
-<p><img src="15.jpg"/></p>
+<p><img src="15.jpg" class="img-thumbnail"/></p>
 </div>
 <div  class="col-sm-6 col-md-3">
-<p><img src="16.jpg"/></p>
+<p><img src="16.jpg" class="img-thumbnail"/></p>
 </div>
 <div  class="col-sm-6 col-md-3">
-<p><img src="12.jpg"/></p>
+<p><img src="12.jpg" class="img-thumbnail"/></p>
 </div>
 <div  class="col-sm-6 col-md-3">
-<p ><img src="13.jpg"/></p>
+<p ><img src="13.jpg" class="img-thumbnail"/></p>
 </div>
 </div>
 
 <div class="row">
 <div  class="col-sm-6 col-md-3">
-<p><img src="15.jpg"/></p>
+<p><img src="15.jpg" class="img-thumbnail"/></p>
 </div>
 <div  class="col-sm-6 col-md-3">
-<p><img src="12.jpg"/></p>
+<p><img src="12.jpg" class="img-thumbnail"/></p>
 </div>
 <div  class="col-sm-6 col-md-3">
-<p><img src="11.png"/></p>
+<p><img src="11.png" class="img-thumbnail" /></p>
 </div>
 <div  class="col-sm-6 col-md-3">
-<p ><img src="17.jpg"/></p>
+<p ><img src="17.jpg" class="img-thumbnail"/></p>
 </div>
 </div>
 </div>
@@ -215,21 +205,12 @@ Pretoria<br>
 </section>
 
 <section id="section-6" class="followus">
-<div class="container">
-<div class="row">
 <h3>Follow Us</h3>
-<div class="col-sm-3 col-xs-2" id="social"><a href="https://www.facebook.com/" ><img src="facebook1.png"/></a>
-</div>
-<div class="col-sm-3 col-xs-2" id="social">
-<a href="#" ><img src="instagram1.png"/></a>
-</div>
-<div class="col-sm-3 col-xs-2" id="social">
-<a href="#" ><img src="twitter1.png"/></a>
-</div>
-<div class="col-sm-3 col-xs-2" id="social">
-<a href="#" ><img src="youtube1.png"/></a>
-</div>
-</div>
+<div class="rows col-sm-12 col-md-12 col-xs-12">
+<a href="https://www.facebook.com/" ><img src="facebook1.png"></a>
+<a href="#" ><img src="instagram1.png"></a>
+<a href="#" ><img src="twitter1.png"></a>
+<a href="#" ><img src="youtube1.png"></a>
 </div>
 </section>
 
