--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
 <body>
 <header>
 <div class="ll">
+
 <div class="my">
 <p class="log"><a href="#section-1" class="link">Vongapp</a></p>
 <button class="but" onclick="myFunction()">Menu</button>
 </div>
+
 <ul id="drop" class="dis" onclick="myFunction1()">
 <li><a href="#section-1" class="link">Home</a></li>
 <li><a href="#section-2" class="link">Service</a></li>
@@ -23,8 +25,37 @@
 <li><a href="#section-4" class="link">Gallery</a></li>
 <li><a href="#section-5" class="link">Contact Us</a></li>
 <li><a href="#section-6" class="link">Follow Us</a></li>
-<li><a href="#section-7" class="link">Careers</a></li>
+<li><button onclick="formFunction()" class="formbut">Careers</button></li>
 </ul>
+<div id="form-page" class="col-sm-6 col-md-6">
+<form id="form1">
+<div class="form-group">
+<label>Name</label>
+<input type="text" id="name" placeholder="Enter name" class="form-control">
+</div>
+
+<div class="form-group">
+<label>Phone</label>
+<input type="text" id="phone" placeholder="Phone number" class="form-control">
+</div>
+
+<div class="form-group">
+<label>Email</label>
+<input type="email" id="email" placeholder="Enter email" class="form-control">
+</div>
+
+<div class="form-group">
+<label for="input-b2">Upload CV</label>
+<input mutiple type="file"  name="input-b2"  id="input-b2" placeholder="Upload file" class="file" data-show-preview="false">
+</div>
+
+<div class="checkbox">
+<label><input type="checkbox" id="check">Remember me</label>
+</div>
+<button type="submit" class="btn btn-default">Submit</button>
+</form>
+</div>
+
 </div>
 </header>
 
@@ -43,26 +74,26 @@ we create application specially for you...
 <h3>Service</h3>
 <div class="container">
 <div class="row">
-<div class="col-sm-12 col-md-6">
+<div class="col-sm-6 col-md-6">
 <h4>Types of application</h4>
 <p>
-We do applications accoding to the <br>client's wants, all we want is the <br>
-description of the application mostly <br>the functionalities the rest is <br>
+We do applications accoding to the client's wants, all we want is the
+description of the application mostly the functionalities the rest is
 for us to create.
 </p>
 </div>
-<div class="col-sm-12 col-md-6">
+<div class="col-sm-6 col-md-6">
 <h4>Hosting</h4>
 <p>
-Hosting is our pririoty as we are the<br> create of the applications, no need to <br>
-worry about hosting we will do it<br> for you for free as will be no cost for<br>
+Hosting is our pririoty as we are the create of the applications, no need to
+worry about hosting we will do it for you for free as will be no cost for
 hosting.
 </p>
 </div>
 </div>
 
 <div class="row">
-<div class="col-sm-12 col-md-6">
+<div class="col-sm-6 col-md-6">
 <h4>Programing langauges</h4>
 <p>
 <ul>
@@ -75,30 +106,30 @@ hosting.
 </ul>
 </p>
 </div>
-<div class="col-sm-12 col-md-6">
+<div class="col-sm-6 col-md-6">
 <h4>Duration</h4>
 <p>
-No estimation time for completion<br>
-because we might set it after <br>
-something come up and delay <br>
-the process of creating application<br>
-or we set the time and complete<br>
-it early than estimated. All<br>
-we saying is that we finish our <br>
+No estimation time for completion
+because we might set it after
+something come up and delay
+the process of creating application
+or we set the time and complete
+it early than estimated. All
+we saying is that we finish our 
 work in time and we satisfy our clients.
 </p>
 </div>
 </div>
 
 <div class="row">
-<div class="col-sm-12 col-md-6">
+<div class="col-sm-6 col-md-6">
 <h4>Cost</h4>
 <p>
-We charge acodinding to how long the<br> application it can 
-take and how much <br>fuctionalities clients want.
+We charge acodinding to how long the application it can 
+take and how much fuctionalities clients want.
 </p>
 </div>
-<div class="col-sm-12 col-md-6">
+<div class="col-sm-6 col-md-6">
 <h4>Booking</h4>
 <p>
 Please visit us <a href="#section-5">Click here </a>
