Change career form behaviour

--- a/index.html
+++ b/index.html
@@ -25,9 +25,11 @@
 <li><a href="#section-4" class="link">Gallery</a></li>
 <li><a href="#section-5" class="link">Contact Us</a></li>
 <li><a href="#section-6" class="link">Follow Us</a></li>
-<li><button onclick="formFunction()" class="formbut">Careers</button></li>
+<li><button class="formbut">Careers</button></li>
 </ul>
-<div id="form-page" class="col-sm-6 col-md-6">
+<div class="c">
+<div id="form-page">
+<span class="close">Close &times;</span>
 <form id="form1">
 <div class="form-group">
 <label>Name</label>
@@ -52,10 +54,10 @@
 <div class="checkbox">
 <label><input type="checkbox" id="check">Remember me</label>
 </div>
-<button type="submit" class="btn btn-default">Submit</button>
+<button type="submit" class="btn">Submit</button>
 </form>
 </div>
-
+</div>
 </div>
 </header>
 
